# Broke

./: .env.example  .gitignore  AGENTS.md  PERSONALITY.md  PLAN.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  supabase-schema.sql
broke/: config.py  main.py  prompts.py
broke/agents/: base.py  culture.py  deep_rag.py  experience.py  orchestrator.py  projects.py  registry.py  researcher.py  scheduling.py  skills.py
broke/events/: bus.py
broke/knowledge/: ingest.py  store.py
broke/llm/: provider.py
broke/memory/: conversation.py
broke/tools/: base.py  call_agent.py  rag_query.py  scheduling.py  web_search.py
knowledge_data/: background.md  projects.md  resume.md  skills.md
prompts/: culture.md  experience.md  projects.md  skills.md
scripts/: embed-knowledge.ts
src/: app.css  app.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/agents/: route.ts
src/app/api/ask/: route.ts
src/app/api/chat/: route.ts
src/app/api/direct-chat/: route.ts
src/app/api/prompts/: route.ts
src/components/: AgentationWrapper.tsx  ChatInput.tsx  ChatMessage.tsx  Icons.tsx  LiquidGlassVars.tsx  StatusBar.tsx
src/lib/: liquid-glass-config.ts  types.ts
src/lib/components/: ChatInput.svelte  ChatMessage.svelte
src/lib/server/: ai.ts  orchestrator.ts  prompts.ts  qa-log.ts
src/lib/server/agents/: registry.ts
src/lib/server/knowledge/: store.ts
src/lib/server/tools/: call-agent.ts  rag-query.ts  scheduling.ts  web-search.ts
src/routes/: +page.svelte
src/routes/api/agents/: +server.ts
(+4 files in other folders)
