[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "broke"
version = "0.1.0"
description = "Multi-agent portfolio system"
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "chromadb",
    "sentence-transformers",
    "rich",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[project.scripts]
broke = "broke.main:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
